2020-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Pick some improvements from patch #362 by Visenri.

2020-01-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Pick some improvements from patch #362 by Visenri.

2020-01-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Pick some improvements from patch #362 by Visenri.

2020-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Fix bug #3170.

2020-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3169.c:
	  Fix bug #3169.

2020-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in handling of non-dead a in __sfr access, possibly bug #3168.

2020-01-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/pdk/gen.c,
	  support/regression/tests/bug-3167.c:
	  Fix bug #3167.

2020-01-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix an issue in handling surviving a when assigning single bytes from (hl) to stack.
	* support/regression/tests/bug-3166.c:
	  Test for bug #3166.

2021-01-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCCdwarf2.c,
	  src/cdbFile.c: partial fix for bug #3153
	* suppport/regression/tests/bug-3081.c: avoid redefinition warning

2021-01-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/cmd.src/cmdlex.l: reverted previous change
	* sim/ucism/cmd.src/cmdutil.h: ensure SOCKET_AVAIL defined before use

2021-01-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/cmd.src/cmdlex.l: change #include order so SOCKET defined

2020-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixes in handling register operands.
	* src/z80/ralloc2.cc:
	  More flexibility for register operands in cast and ^.

2020-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c: